# career-pilot-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/agents/: gemini_client.py  job_extractor.py  match_scorer.py  resume_extractor.py  resume_tailorer.py
backend/app/api/: router.py
backend/app/api/routes/: jobs.py  profile.py
backend/app/core/: config.py  database.py  migrate.py
backend/app/models/: job.py  profile.py  project.py
backend/app/prompts/: __init__.py  formatters.py  job_extractor.py  match_scorer.py  resume_extractor.py  resume_tailorer.py
backend/app/schemas/: job.py  match.py  profile.py  project.py  resume_extraction.py  tailored_resume.py
backend/app/services/: jobs.py  knowledge_base.py  match.py  pdf_parser.py  resume_tailor.py
backend/tests/: conftest.py  test_health.py  test_jobs.py  test_match.py  test_profile.py  test_resume_extract.py  test_resume_tailor.py
frontend/: .env.example  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FormField.tsx  Layout.tsx  MatchScoreCard.tsx  ProjectList.tsx  ResumeUpload.tsx  StatusBadge.tsx  TagList.tsx
frontend/src/pages/: Dashboard.tsx  JobDetail.tsx  JobsList.tsx  NewJob.tsx  Profile.tsx
frontend/src/types/: job.ts  match.ts  profile.ts  resume.ts
